--- a/main.html
+++ b/main.html
@@ -8,8 +8,13 @@
 </head>
 <body>
     <section>
-        <h1>LASITH DISSANAYAKE</h1>
-        <img src="Images/Lasith_2.png">
+        <div id="designation">
+            <h1>LASITH DISSANAYAKE</h1>
+            <p>Materials Science & Engineering (UG) | Univeristy of Moratuwa</p>           
+        </div>
+        
+
+        <img src="Images/Lasith_3.png">
     </section>
 </body>
 </html>
