--- a/main.html
+++ b/main.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasith Dissanayake</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <ul id="nav-bar">
+            <li id="home"><a href="#home">Home</a></li>
+            <li id="about"><a href="#about">About</a></li>
+            <li id="projects"><a href="#projects">Projects</a></li>
+            <li id="contact"><a href="#contact">Contact</a></li>
+        </ul>
+    </header>
+
     <section>
         <div id="designation">
             <h1>LASITH DISSANAYAKE</h1>
