--- a/main.html
+++ b/main.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasith Dissanayake</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="main-styles.css">
 </head>
 <body>
     <header>
         <ul id="nav-bar">
-            <li id="home"><a href="#home">Home</a></li>
-            <li id="about"><a href="#about">About</a></li>
-            <li id="projects"><a href="#projects">Projects</a></li>
-            <li id="contact"><a href="#contact">Contact</a></li>
+            <li id="home"><a href="main.html">Home</a></li>
+            <li id="about"><a href="about.html">About</a></li>
+            <li id="projects"><a href="projects.html">Projects</a></li>
+            <li id="contact"><a href="contact.html">Contact</a></li>
         </ul>
     </header>
 
@@ -24,5 +24,14 @@
 
         <img src="Images/Lasith_4.png">
     </section>
+
+    <footer>
+        <ul id="nav-bar">
+            <li id="linkedin"><a href="#linkedin"><img src="vector/linkedin_logo.png" alt="linkedin logo"></a></li>
+            <!-- <li id="github"><a href="#github"><img src="" alt="github logo"></a></li> -->
+            <li id="facebook"><a href="#facebook"><img src="vector/facebook_logo.png" alt="facebook logo"></a></li>
+            <li id="whatsapp"><a href="#whatsapp"><img src="vector/whatsapp_logo.png" alt="facebook logo"></a></li>
+       </ul>
+    </footer>
 </body>
 </html>
