--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
+    <link rel="stylesheet" href="contact-styles.css">
 </head>
 <body>
+    <header>
+        <ul id="nav-bar">
+            <li id="home"><a href="main.html">Home</a></li>
+            <li id="about"><a href="about.html">About</a></li>
+            <li id="projects"><a href="projects.html">Projects</a></li>
+            <li id="contact"><a href="contact.html">Contact</a></li>
+        </ul>
+    </header>
+
+    <div id="section-container">
+        <section id="about-section-1">
+
+        </section>
+    </div>
     
 </body>
 </html>
