--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Lasith Dissanayake</title>
     <link rel="stylesheet" href="about-styles.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
             <li id="contact"><a href="contact.html">Contact</a></li>
         </ul>
     </header>
-    
+
     <div id="section-container">
         <section id="about-section-1">
 
