--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <title>Lasith Dissanayake</title>
     <link rel="stylesheet" href="contact-styles.css">
 </head>
 <body>
@@ -17,8 +17,24 @@
     </header>
 
     <div id="section-container">
-        <section id="about-section-1">
+        <section id="contact-section-1">
+            <form>
 
+                <div id="div-name">
+                    <label for="name" id="labelName" >Full Name : </label>
+                    <input type="text" id="inputName" name="name" placeholder="Full Name">
+                </div>
+
+                <div id="div-email">
+                    <label for="email" id="labelEmail" >Email : </label>
+                    <input type="email" id="inputEmail" name="email" placeholder="...@google.com">
+                </div>
+
+                <div id="div-feedback">
+                    <label for="feedback" id="labelFeedback" >Feedback : </label>
+                    <input type="text" id="inputFeedback" name="feedback" placeholder="...@google.com">
+                </div>
+            </form>
         </section>
     </div>
     
