--- a/contact.html
+++ b/contact.html
@@ -17,24 +17,27 @@
     </header>
 
     <div id="section-container">
-        <section id="contact-section-1">
+        <section id="contact-section">
             <form>
-
                 <div id="div-name">
-                    <label for="name" id="labelName" >Full Name : </label>
+                    <label for="name" id="labelName" >Full Name </label>
                     <input type="text" id="inputName" name="name" placeholder="Full Name">
                 </div>
 
                 <div id="div-email">
-                    <label for="email" id="labelEmail" >Email : </label>
-                    <input type="email" id="inputEmail" name="email" placeholder="...@google.com">
+                    <label for="email" id="labelEmail" >Email </label>
+                    <input type="email" id="inputEmail" name="email" placeholder="...@gmail.com">
                 </div>
 
                 <div id="div-feedback">
-                    <label for="feedback" id="labelFeedback" >Feedback : </label>
-                    <input type="text" id="inputFeedback" name="feedback" placeholder="...@google.com">
+                    <label for="feedback" id="labelFeedback" >Feedback </label>
+                    <input type="text" id="inputFeedback" name="feedback" placeholder="Description">
                 </div>
+
+                <button id="btnSubmit" href=" ">Submit</button>
+
             </form>
+            
         </section>
     </div>
     
