--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <section id="background">
         <header>
             <ul id="nav-bar">
-                <li id="home"><a href="main.html">Home</a></li>
+                <li id="home"><a href="index.html">Home</a></li>
                 <li id="about"><a href="about.html">About</a></li>
                 <li id="projects"><a href="projects.html">Projects</a></li>
                 <li id="contact"><a href="contact.html">Contact</a></li>
