--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <ul id="nav-bar">
-            <li id="home"><a href="main.html">Home</a></li>
+            <li id="home"><a href="index.html">Home</a></li>
             <li id="about"><a href="about.html">About</a></li>
             <li id="projects"><a href="projects.html">Projects</a></li>
             <li id="contact"><a href="contact.html">Contact</a></li>
