--- a/index.html
+++ b/index.html
@@ -49,11 +49,8 @@
           <h1 class="title">Lasith Dissanayake</h1>
           <p class="section__text__p2">Materials Science Engineer</p>
           <div class="btn-container">
-            <button
-              class="btn btn-color-2"
-              onclick="window.open('./assets/resume-example.pdf')"
-            >
-              Download CV
+            <button class="btn btn-color-2">
+              <a href="resources/CV-Lasith.pdf" download>Download CV</a>
             </button>
             <button class="btn btn-color-1" onclick="location.href='./#contact'">
               Contact Info
@@ -85,16 +82,6 @@
               <h3><i class="fa fa-book"></i> Education</h3>
               <p>B.Sc. Eng. Materials Science and Engineering</p>
             </div>
-          </div>
-          <div class="text-container">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-              reprehenderit et laborum, rem, dolore eum quod voluptate
-              exercitationem nobis, nihil esse debitis maxime facere minus sint
-              delectus velit in eos quo officiis explicabo deleniti dignissimos.
-              Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-              reiciendis ea magnam? Nulla, impedit fuga!
-            </p>
           </div>
         </div>
       </div>
@@ -196,72 +183,68 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-1.png"
-                alt="Project 1"
+                src="project-images/Al-extrusion-die-project.jpg"
+                alt="Al Extrusion Die Design Project Image"
                 class="project-img"
               />
             </div>
-            <h2 class="skills-sub-title project-title">Project One</h2>
+            <h2 class="skills-sub-title project-title">Al Extrusion Die Design</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
               >
-                Github
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Live Demo
+                More
               </button>
             </div>
           </div>
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-2.png"
-                alt="Project 2"
+                src="project-images/gear-design.jpg"
+                alt="GearBox Design Project Image"
                 class="project-img"
               />
             </div>
-            <h2 class="skills-sub-title project-title">Project Two</h2>
+            <h2 class="skills-sub-title project-title">Gear Box Design</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
               >
-                Github
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Live Demo
+                More
               </button>
             </div>
           </div>
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-3.png"
-                alt="Project 3"
+                src="project-images/exercise-machine-project.png"
+                alt="Exercise Machine Design Project Image"
                 class="project-img"
               />
             </div>
-            <h2 class="skills-sub-title project-title">Project Three</h2>
+            <h2 class="skills-sub-title project-title">Exercise Machine Design</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
               >
-                Github
+                More
               </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="project-images/time-since-death-project.jpg"
+                alt="Time Since Death Project Image"
+                class="project-img"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">Time Since Death</h2>
+            <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
               >
-                Live Demo
+                More
               </button>
             </div>
           </div>
