--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@
         </div>
       </nav>
     </footer>
+    <p id="bottom"> &copy; Lasith Dissanayake | 2024</p>
     <script src="script.js"></script>
   </body>
 </html>
