--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lasith Dissanayake</title>    
-    <link rel="icon" type="image/jpeg" href="Images/L.jpeg">
+    <link rel="icon" type="image/jpeg" href="Images/L.png">
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
-  <body>
+  <body >
     <div class="hero" id="hero">
       <nav id="desktop-nav">
         <div class="logo"><a href="#">Lasith D.</a></div>
@@ -46,8 +46,8 @@
         </div>
         <div class="section__text">
           <p class="section__text__p1">Hello, I'm</p>
-          <h1 class="title">Lasith Dissanayake</h1>
-          <p class="section__text__p2">Materials Science Engineer</p>
+          <h1 class="title lasith">Lasith Dissanayake</h1>
+          <p class="section__text__p2">AI/ML Enthusiast</p>
           <div class="btn-container">
             <button class="btn btn-color-2">
               <a href="resources/CV-Lasith.pdf" download>Download CV</a>
@@ -67,7 +67,7 @@
       <div class="section-container">
         <div class="section__pic-container_next">
           <img
-            src="./Images/lasith-7.jpg"
+            src="./Images/lasith-8.jpg"
             alt="Profile picture"
             class="about-pic"
           />
@@ -76,12 +76,18 @@
           <div class="about-containers">
             <div class="details-container">              
               <h3> <i class="fa fa-history"></i> Experience</h3>
-              <p>6 months Intern<br/>Michelin Lanka (Pvt) Ltd. CPD<br/>Materials Science Engineer</p>
+              <p>ML Intern - Synacal.ai</p>
+              <p>(Present)</p>
             </div>
             <div class="details-container">
               <h3><i class="fa fa-book"></i> Education</h3>
               <p>B.Sc. Eng. Materials Science and Engineering</p>
             </div>
+          </div>
+          <div class="text-container">
+            <p>
+              I'm all about diving into the exciting worlds of <b>Generative AI & Machine Learning</b>. I'm a quick learner and love tackling new challenges head-on. When I'm not geeking out over programming, you can catch me in a game of <b>Chess</b>, strategizing my next move. I'm also a big fan of <b>movies and TV series</b> - there's nothing like getting lost in a captivating story! With a knack for staying curious and a passion for innovation, I'm always eager to explore new tech frontiers and to push myself towards <b>SUCCESS!!!</b>
+            </p>
           </div>
         </div>
       </div>
@@ -95,76 +101,51 @@
       <div class="skills-details-container">
         <div class="about-containers">
           <div class="details-container">
-            <h2 class="skills-sub-title">Lean Six Sigma (Certified)</h2>
+            <h2 class="skills-sub-title">Generative AI</h2>
             <div class="article-container">
               <article>
                 <div>
-                  <h3>White Belt</h3>
+                  <h3>RAG</h3>
                 </div>
               </article>
               <article>
                 <div>
-                  <h3>Yellow Belt</h3>
+                  <h3>Fine Tuning</h3>
                 </div>
               </article>
               <article>
                 <div>
-                  <h3>Green Belt</h3>
+                  <h3>LLMs</h3>
                 </div>
               </article>
               <article>
                 <div>
-                  <h3>Black Belt</h3>
+                  <h3>Langchain</h3>
                 </div>
               </article>
             </div>
           </div>
           <div class="details-container">
-            <h2 class="skills-sub-title">Lean Management</h2>
+            <h2 class="skills-sub-title">Machine Learning</h2>
             <div class="article-container">
               <article>
                 <div>
-                  <h3>Lean Specialist</h3>
+                  <h3>Supervised</h3>
                 </div>
               </article>
               <article>
                 <div>
-                  <h3>Lean Expert</h3>
+                  <h3>Unsupervised</h3>
                 </div>
               </article>
               <article>
                 <div>
-                  <h3>VSM</h3>
+                  <h3>Reinforcement</h3>
                 </div>
               </article>
               <article>
                 <div>
-                  <h3>JIT</h3>
-                </div>
-              </article>
-            </div>
-          </div>
-          <div class="details-container">
-            <h2 class="skills-sub-title">Lean Management</h2>
-            <div class="article-container">
-              <article>
-                <div>
-                  <h3>Lean Specialist</h3>
-                </div>
-              </article>
-              <article>
-                <div>
-                  <h3>Lean Expert</h3>
-                </div>
-              </article>
-              <article>
-                <div>
-                  <h3>VSM</h3>
-                </div>
-              </article>
-              <article>
-                <div>
-                  <h3>JIT</h3>
+                  <h3>ANN, CNN, RNN</h3>
                 </div>
               </article>
             </div>
@@ -186,17 +167,23 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="project-images/Al-extrusion-die-project.jpg"
-                alt="Al Extrusion Die Design Project Image"
+                src="project-images/01/03.png"
+                alt="Mr.KnowItAll project"
                 class="project-img"
               />
             </div>
-            <h2 class="skills-sub-title project-title">Al Extrusion Die Design</h2>
+            <h2 class="skills-sub-title project-title">Mr. KnowItAll</h2>
+            <p>A chatbot using <b>GROQ</b> API key to acheive the superfast responses using <b>langchain</b> as the framework to build the bot. </p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
               >
-                More
+                <a href="https://github.com/DissanayakeLYB/KnowItAll" class="project_code" target="_blank">Github</a>
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+              >
+              <a href="https://know-it-all.streamlit.app/" class="project_code" target="_blank">Live</a>
               </button>
             </div>
           </div>
@@ -213,41 +200,12 @@
               <button
                 class="btn btn-color-2 project-btn"
               >
-                More
+                Github
               </button>
-            </div>
-          </div>
-          <div class="details-container color-container">
-            <div class="article-container">
-              <img
-                src="project-images/exercise-machine-project.png"
-                alt="Exercise Machine Design Project Image"
-                class="project-img"
-              />
-            </div>
-            <h2 class="skills-sub-title project-title">Exercise Machine Design</h2>
-            <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
               >
-                More
-              </button>
-            </div>
-          </div>
-          <div class="details-container color-container">
-            <div class="article-container">
-              <img
-                src="project-images/time-since-death-project.jpg"
-                alt="Time Since Death Project Image"
-                class="project-img"
-              />
-            </div>
-            <h2 class="skills-sub-title project-title">Time Since Death</h2>
-            <div class="btn-container">
-              <button
-                class="btn btn-color-2 project-btn"
-              >
-                More
+                Live
               </button>
             </div>
           </div>
@@ -272,7 +230,7 @@
         </div>
         <div class="contact-info-container">
           <i class="fa fa-linkedin"></i>
-          <p><a href="https://www.linkedin.com" target="_blank">Lasith Dissnayake</a></p>
+          <p><a href="https://www.linkedin.com/in/lasith-dissanayake/" target="_blank">Lasith Dissnayake</a></p>
         </div>
         </div>
       </div>
