--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
               />
             </div>
             <h2 class="skills-sub-title project-title">Mr. KnowItAll</h2>
-            <p>A chatbot using <b>GROQ</b> API key to acheive the superfast responses using <b>langchain</b> as the framework to build the bot. </p>
+            <p>A chatbot using <b>GROQ</b> API key to acheive the superfast responses using <b>langchain</b> as the framework to build the bot. Used <b>streamlit</b> for the UI.  </p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -183,29 +183,30 @@
               <button
                 class="btn btn-color-2 project-btn"
               >
-              <a href="https://know-it-all.streamlit.app/" class="project_code" target="_blank">Live</a>
+              <a href="https://know-it-all.streamlit.app/" class="project_code" target="_blank">Live Demo</a>
               </button>
             </div>
           </div>
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="project-images/gear-design.jpg"
-                alt="GearBox Design Project Image"
+                src="project-images/02/03.png"
+                alt="Ask-Wiki Project"
                 class="project-img"
               />
             </div>
-            <h2 class="skills-sub-title project-title">Gear Box Design</h2>
+            <h2 class="skills-sub-title project-title">Ask-Wiki</h2>
+            <p>This bot reponds with details collected from <b>Wikipedia</b> and generates <b>20 links</b> to read more about that topic. Used <b>streamlit</b> for the UI. </p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
               >
-                Github
+              <a href="https://github.com/DissanayakeLYB/AskWiki" class="project_code" target="_blank">Github</a>
               </button>
               <button
                 class="btn btn-color-2 project-btn"
               >
-                Live
+              <a href="https://ask-wiki.streamlit.app/AskWiki" class="project_code" target="_blank">Live Demo</a>
               </button>
             </div>
           </div>
