--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
             <div class="article-container">
               <article>
                 <div>
+                  <img src="">
                   <h3>RAG</h3>
                 </div>
               </article>
@@ -120,6 +121,16 @@
               </article>
               <article>
                 <div>
+                  <h3>Hugging Face</h3>
+                </div>
+              </article>
+              <article>
+                <div>
+                  <h3>Langchain</h3>
+                </div>
+              </article>
+              <article>
+                <div>
                   <h3>Langchain</h3>
                 </div>
               </article>
@@ -130,22 +141,32 @@
             <div class="article-container">
               <article>
                 <div>
-                  <h3>Supervised</h3>
+                  <img src="skills-images/tf_logo.png" alt="tensorflow logo">
+                  <h3>Tensorflow</h3>
                 </div>
               </article>
               <article>
                 <div>
-                  <h3>Unsupervised</h3>
+                  <img src="skills-images/keras_logo.png" alt="keras logo">
+                  <h3>Keras</h3>
                 </div>
               </article>
               <article>
                 <div>
-                  <h3>Reinforcement</h3>
+                  <img src="skills-images/pytorch logo.png" alt="PyTorch">
+                  <h3>PyTorch</h3>
                 </div>
               </article>
               <article>
                 <div>
-                  <h3>ANN, CNN, RNN</h3>
+                  <img src="skills-images/sklearn_logo.png" alt="scikit-learn logo"> 
+                  <h3>Scikit-Learn</h3>
+                </div>
+              </article>
+              <article>
+                <div>
+                  <img src="skills-images/SpaCy logo.png" alt="SpaCy logo">
+                  <h3>Spacy</h3>
                 </div>
               </article>
             </div>
@@ -173,7 +194,7 @@
               />
             </div>
             <h2 class="skills-sub-title project-title">Mr. KnowItAll</h2>
-            <p>A chatbot using <b>GROQ</b> API key to acheive the superfast responses using <b>langchain</b> as the framework to build the bot. Used <b>streamlit</b> for the UI.  </p>
+            <p>A chatbot using <b>GROQ API key</b> to acheive the superfast responses using <b>Langchain</b> as the framework to build the bot. Used <b>streamlit</b> for the UI.  </p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
