--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </div>
           <div class="menu-links">
             <li><a href="#about" onclick="toggleMenu()">About</a></li>
-            <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
+            <!-- <li><a href="#skills" onclick="toggleMenu()">Skills</a></li> -->
             <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
             <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
           </div>
@@ -51,9 +51,6 @@
           <div class="btn-container">
             <button class="btn btn-color-2">
               <a href="resources/CV-Lasith.pdf" download>Download CV</a>
-            </button>
-            <button class="btn btn-color-1" onclick="location.href='./#contact'">
-              Contact Info
             </button>
           </div>
         </div>
