--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body >
     <div class="hero" id="hero">
       <nav id="desktop-nav">
-        <div class="logo"><a href="#">Lasith D.</a></div>
+        <div class="logo"><a href="index.html">Lasith D.</a></div>
         <div>
           <ul class="nav-links">
             <li><a href="#about">About</a></li>
@@ -183,7 +183,7 @@
               />
             </div>
             <h2 class="skills-sub-title project-title">Mr. KnowItAll</h2>
-            <p>A chatbot using <b>GROQ API key</b> to acheive the superfast responses using <b>Langchain</b> as the framework to build the bot. Used <b>streamlit</b> for the UI.  </p>
+            <p>A chatbot using <b>Groq</b> API key to achieve the superfast responses using <b>Langchain</b> as the framework to build the bot. Used <b>Streamlit</b> for the UI.</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -206,7 +206,7 @@
               />
             </div>
             <h2 class="skills-sub-title project-title">Ask-Wiki</h2>
-            <p>This bot reponds with details collected from <b>Wikipedia</b> and generates <b>20 links</b> to read more about that topic. Used <b>streamlit</b> for the UI. </p>
+            <p>This bot responds with details collected from Wikipedia and generates 20 links to read more about that topic using <b>Groq</b> API key from the user. Used <b>Streamlit</b> for the UI and <b>Langchain</b> as the framework.</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
