--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
           <div class="about-containers">
             <div class="details-container">              
               <h3> <i class="fa fa-history"></i> Experience</h3>
-              <p>ML Intern - Synacal.ai</p>
-              <p>(Present)</p>
+              <p>Self-Learning by Projects</p>
             </div>
             <div class="details-container">
               <h3><i class="fa fa-book"></i> Education</h3>
