Updated the Projects section

--- a/index.html
+++ b/index.html
@@ -98,7 +98,6 @@
             <div class="article-container">
               <article>
                 <div>
-                  <img src="">
                   <h3>RAG</h3>
                 </div>
               </article>
@@ -134,31 +133,26 @@
             <div class="article-container">
               <article>
                 <div>
-                  <img src="skills-images/tf_logo.png" alt="tensorflow logo">
                   <h3>Tensorflow</h3>
                 </div>
               </article>
               <article>
                 <div>
-                  <img src="skills-images/keras_logo.png" alt="keras logo">
                   <h3>Keras</h3>
                 </div>
               </article>
               <article>
                 <div>
-                  <img src="skills-images/pytorch logo.png" alt="PyTorch">
                   <h3>PyTorch</h3>
                 </div>
               </article>
               <article>
                 <div>
-                  <img src="skills-images/sklearn_logo.png" alt="scikit-learn logo"> 
                   <h3>Scikit-Learn</h3>
                 </div>
               </article>
               <article>
                 <div>
-                  <img src="skills-images/SpaCy logo.png" alt="SpaCy logo">
                   <h3>Spacy</h3>
                 </div>
               </article>
@@ -184,16 +178,12 @@
             <h2 class="skills-sub-title project-title">Mr. KnowItAll</h2>
             <p>A chatbot using <b>Groq</b> API key to achieve the superfast responses using <b>Langchain</b> as the framework to build the bot. Used <b>Streamlit</b> for the UI.</p>
             <div class="btn-container">
-              <button
-                class="btn btn-color-2 project-btn"
-              >
-                <a href="https://github.com/DissanayakeLYB/KnowItAll" class="project_code" target="_blank">Github</a>
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-              >
-              <a href="https://know-it-all.streamlit.app/" class="project_code" target="_blank">Live Demo</a>
-              </button>
+              <a href="https://github.com/DissanayakeLYB/KnowItAll" class="project_code" target="_blank">
+                <button class="btn btn-color-2 project-btn">Github</button>
+              </a>
+              <a href="https://know-it-all.streamlit.app/" class="project_code" target="_blank">
+                <button class="btn btn-color-2 project-btn">Live Demo</button>
+              </a>
             </div>
           </div>
           <div class="details-container color-container">
@@ -207,16 +197,44 @@
             <h2 class="skills-sub-title project-title">Ask-Wiki</h2>
             <p>This bot responds with details collected from Wikipedia and generates 20 links to read more about that topic using <b>Groq</b> API key from the user. Used <b>Streamlit</b> for the UI and <b>Langchain</b> as the framework.</p>
             <div class="btn-container">
-              <button
-                class="btn btn-color-2 project-btn"
-              >
-              <a href="https://github.com/DissanayakeLYB/AskWiki" class="project_code" target="_blank">Github</a>
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-              >
-              <a href="https://ask-wiki.streamlit.app/AskWiki" class="project_code" target="_blank">Live Demo</a>
-              </button>
+              <a href="https://github.com/DissanayakeLYB/AskWiki" class="project_code" target="_blank">
+                <button class="btn btn-color-2 project-btn">Github</button>
+              </a>
+              <a href="https://ask-wiki.streamlit.app/AskWiki" class="project_code" target="_blank">
+                <button class="btn btn-color-2 project-btn">Live Demo</button>
+              </a>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="project-images/03/01.png"
+                alt="AgentArticle"
+                class="project-img"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">AgentArticle</h2>
+            <p>AgentArticle automates high-quality content creation for social media using <b>AI models</b>, <b>Selenium</b> for web scraping, and API integrations using <b>Groq as the LLM</b>.</p>
+            <div class="btn-container">
+              <a href="https://github.com/DissanayakeLYB/Agentic-Articles" class="project_code" target="_blank">
+                <button class="btn btn-color-2 project-btn">Github</button>
+              </a>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="project-images/04/01.png"
+                alt="AutoScroller"
+                class="project-img"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">Autoscroller</h2>
+            <p>This project uses Python and MediaPipe to create an eye-tracking system that detects eye movements for page scrolling. It calibrates the eyes'initial position to enable scrolling up and down based on vertical eye movement.</p>
+            <div class="btn-container">
+              <a href="https://github.com/DissanayakeLYB/AutoScroller" class="project_code" target="_blank">
+                <button class="btn btn-color-2 project-btn">Github</button>
+              </a>
             </div>
           </div>
         </div>
@@ -252,7 +270,7 @@
         </div>
       </nav>
     </footer>
-    <p id="bottom"> &copy; Lasith Dissanayake | 2024</p>
+    <p id="bottom"> &copy; Lasith Dissanayake | 2025</p>
     <script src="script.js"></script>
   </body>
 </html>
