--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <p class="section__text__p2">AI/ML Enthusiast</p>
           <div class="btn-container">
             <button class="btn btn-color-2">
-              <a href="resources/CV-Lasith.pdf" download>Download CV</a>
+              <a href="resources/Lasith_Dissanayake_CV.pdf" download>Download CV</a>
             </button>
           </div>
         </div>
