--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
       <h1 class="title">Projects</h1>
       <div class="skills-details-container">
         <div class="about-containers">
-          <div class="details-container color-container">
+          <!-- <div class="details-container color-container">
             <div class="article-container">
               <img
                 src="project-images/01/03.png"
@@ -185,8 +185,8 @@
                 <button class="btn btn-color-2 project-btn">Live Demo</button>
               </a>
             </div>
-          </div>
-          <div class="details-container color-container">
+          </div> -->
+          <!-- <div class="details-container color-container">
             <div class="article-container">
               <img
                 src="project-images/02/03.png"
@@ -204,7 +204,7 @@
                 <button class="btn btn-color-2 project-btn">Live Demo</button>
               </a>
             </div>
-          </div>
+          </div> -->
           <div class="details-container color-container">
             <div class="article-container">
               <img
@@ -224,7 +224,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="project-images/04/01.png"
+                src="project-images/04/Autoscroller.png"
                 alt="AutoScroller"
                 class="project-img"
               />
