--- a/index.html
+++ b/index.html
@@ -1,238 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lasith Dissanayake</title>    
-    <link rel="icon" type="image/jpeg" href="Images/L.png">
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="mediaqueries.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  </head>
-  <body >
-    <div class="hero" id="hero">
-      <nav id="desktop-nav">
-        <div class="logo"><a href="index.html">Lasith D.</a></div>
-        <div>
-          <ul class="nav-links">
-            <li><a href="#about">About</a></li>
-            <!-- <li><a href="#skills">Skills</a></li> -->
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div>
-      </nav>
-      <nav id="hamburger-nav">
-        <div class="logo"><a href="#">Lasith D.</a></div>
-        <div class="hamburger-menu">
-          <div class="hamburger-icon" onclick="toggleMenu()">
-            <span></span>
-            <span></span>
-            <span></span>
-          </div>
-          <div class="menu-links">
-            <li><a href="#about" onclick="toggleMenu()">About</a></li>
-            <!-- <li><a href="#skills" onclick="toggleMenu()">Skills</a></li> -->
-            <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
-            <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
-          </div>
-        </div>
-      </nav>
-    
-      <section id="profile">
-        <div class="section__pic-container">
-          <img src="./Images/Lasith_4.png" alt="Lasith's profile picture" />
-        </div>
-        <div class="section__text">
-          <p class="section__text__p1">Hello, I'm</p>
-          <h1 class="title lasith">Lasith Dissanayake</h1>
-          <p class="section__text__p2">AI/ML Enthusiast</p>
-          <div class="btn-container">
-            <button class="btn btn-color-2">
-              <a href="resources/Lasith_Dissanayake_resume.pdf" download>Download CV</a>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio Website</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital@0;1&family=Noto+Sans+Cuneiform&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
+</head>
+<body>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container">
+            <a class="navbar-brand" href="./index.html">&lt;lasith/&gt; </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
             </button>
-          </div>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto justify-content-center">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#projects">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#blog">Blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#skills">Skills</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </section>
-    </div>
+    </nav>
 
-    <section id="about">
-      <p class="section__text__p1">Get To Know More</p>
-      <h1 class="title">About Me</h1>
-      <div class="section-container">
-        <div class="section__pic-container_next">
-          <img
-            src="./Images/lasith-8.jpg"
-            alt="Profile picture"
-            class="about-pic"
-          />
-        </div>
-        <div class="about-details-container">
-          <div class="about-containers">
-            <div class="details-container">              
-              <h3> <i class="fa fa-history"></i> Experience</h3>
-              <p>Self-Learning by Projects</p>
-            </div>
-            <div class="details-container">
-              <h3><i class="fa fa-book"></i> Education</h3>
-              <p>B.Sc. Eng. Materials Science and Engineering</p>
-            </div>
-          </div>
-          <div class="text-container">
-            <p>
-              I'm all about diving into the exciting worlds of <b>Generative AI & Machine Learning</b>. I'm a quick learner and love tackling new challenges head-on. When I'm not geeking out over programming, you can catch me in a game of <b>Chess</b>, strategizing my next move. I'm also a big fan of <b>movies and TV series</b> - there's nothing like getting lost in a captivating story! With a knack for staying curious and a passion for innovation, I'm always eager to explore new tech frontiers and to push myself towards <b>SUCCESS!!!</b>
-            </p>
-          </div>
-        </div>
-      </div>    
-    </section>
+    <main class="container">
+        <section class="hero-section">
+            <h1 class="main-title">
+                <span class="animated-text">Lasith Dissanayake</span>
+            </h1>
+            <p class="subtitle">FRONTEND DEVELOPER | DESIGNER</p>
+            <button class="connect-btn">CONNECT</button>
+            <br>
+            <br>
+        </section>
+    </main>
 
-    <!-- <section id="skills">
-      <p class="section__text__p1">Explore My</p>
-      <h1 class="title">Skills</h1>
-      <div class="skills-details-container">
-        <div class="about-containers">
-          <div class="details-container">
-            <h2 class="skills-sub-title">Generative AI</h2>
-            <div class="article-container">
-              <article>
-                <div>
-                  <h3>RAG</h3>
-                </div>
-              </article>
-              <article>
-                <div>
-                  <h3>Fine Tuning</h3>
-                </div>
-              </article>
-              <article>
-                <div>
-                  <h3>LLMs</h3>
-                </div>
-              </article>
-              <article>
-                <div>
-                  <h3>Hugging Face</h3>
-                </div>
-              </article>
-              <article>
-                <div>
-                  <h3>Langchain</h3>
-                </div>
-              </article>
-              <article>
-                <div>
-                  <h3>Langchain</h3>
-                </div>
-              </article>
-            </div>
-          </div>
-          <div class="details-container">
-            <h2 class="skills-sub-title">Machine Learning</h2>
-            <div class="article-container">
-              <article>
-                <div>
-                  <h3>Tensorflow</h3>
-                </div>
-              </article>
-              <article>
-                <div>
-                  <h3>Keras</h3>
-                </div>
-              </article>
-              <article>
-                <div>
-                  <h3>PyTorch</h3>
-                </div>
-              </article>
-              <article>
-                <div>
-                  <h3>Scikit-Learn</h3>
-                </div>
-              </article>
-              <article>
-                <div>
-                  <h3>Spacy</h3>
-                </div>
-              </article>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section> -->
-
-    <section id="projects">   
-      <p class="section__text__p1">Browse My Recent</p>
-      <h1 class="title">Projects</h1>
-      <div class="skills-details-container">
-        <div class="about-containers">
-          <div class="details-container color-container">
-            <div class="article-container">
-              <img
-                src="project-images/03/01.png"
-                alt="AgentArticle"
-                class="project-img"
-              />
-            </div>
-            <h2 class="skills-sub-title project-title">AgentArticle</h2>
-            <p>AgentArticle automates high-quality content creation for social media using <b>AI models</b>, <b>Selenium</b> for web scraping, and API integrations using <b>Groq as the LLM</b>.</p>
-            <div class="btn-container">
-              <a href="https://github.com/DissanayakeLYB/Agentic-Articles" class="project_code" target="_blank">
-                <button class="btn btn-color-2 project-btn">Github</button>
-              </a>
-            </div>
-          </div>
-          <div class="details-container color-container">
-            <div class="article-container">
-              <img
-                src="project-images/04/Autoscroller.png"
-                alt="AutoScroller"
-                class="project-img"
-              />
-            </div>
-            <h2 class="skills-sub-title project-title">Autoscroller</h2>
-            <p>This project uses Python and MediaPipe to create an eye-tracking system that detects eye movements for page scrolling. It calibrates the eyes'initial position to enable scrolling up and down based on vertical eye movement.</p>
-            <div class="btn-container">
-              <a href="https://github.com/DissanayakeLYB/AutoScroller" class="project_code" target="_blank">
-                <button class="btn btn-color-2 project-btn">Github</button>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>     
-    </section>
-
-    <section id="contact">
-      <p class="section__text__p1">Get in Touch</p>
-      <h1 class="title">Contact Me</h1>
-      <div class="contact-info-upper-container">
-        <div class="contact-info-container">
-          <i class="fa fa-github"></i>
-          <p><a href="https://github.com/DissanayakeLYB" target="_blank">DissnayakeLYB</a></p>
-        </div>
-        <div class="contact-info-container">
-          <i class="fa fa-envelope"></i>
-          <p><a href="mailto:examplemail@gmail.com">lasithdissanayake.official@gmail.com</a></p>
-        </div>
-        <div class="contact-info-container">
-          <i class="fa fa-linkedin"></i>
-          <p><a href="https://www.linkedin.com/in/lasith-dissanayake/" target="_blank">Lasith Dissnayake</a></p>
-        </div>
-      </div>
-    </section>
-    <footer>
-      <nav>
-        <div class="nav-links-container">
-          <ul class="nav-links">
-            <li><a href="#about">About</a></li>
-            <!-- <li><a href="#skills">Skills</a></li> -->
-            <li><a href="#projects">Projects</a></li>
-          </ul>
-        </div>
-      </nav>
-    </footer>
-    <p id="bottom"> &copy; Lasith Dissanayake | 2025</p>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
-  </body>
+</body>
 </html>
+
