--- a/index.html
+++ b/index.html
@@ -4,18 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasith | Portfolio</title>
+    <meta name="msapplication-square70x70logo" content=".../icons8-blender 3d-ios7-70.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital@0;1&family=Noto+Sans+Cuneiform&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital@0;1&family=Noto+Sans+Cuneiform&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="./Images/Profile/L.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link href="./styles.css" rel="stylesheet">
+    <link href="./mediaqueries.css" rel="stylesheet">
 
-    <link href="styles.css" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand" href="./index.html">&lt;lasith/&gt; </a>
+            <a class="navbar-brand" href="#top">&lt;lasith/&gt; </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -41,12 +44,12 @@
         </div>
     </nav>
 
-    <main class="container">
+    <main id ="top" class="container">
         <section class="hero-section">
             <h1 class="main-title">
                 <span class="animated-text">Lasith Dissanayake</span>
             </h1>
-            <p class="subtitle">FRONTEND DEVELOPER | DESIGNER</p>
+            <p class="subtitle">FRONTEND DEVELOPER</p>
             <a href="./resources/Lasith_Dissanayake_resume.pdf" download><button class="resume-btn" >RESUME</button></a>
             <br>
             <br>
@@ -59,7 +62,7 @@
             <h2 class="section-title">About Me</h2>
             <div class="about-grid">
                 <div class="about-text">
-                    <p>I'm a passionate Frontend Developer and Designer with a keen eye for creating beautiful, functional web experiences. <br>With hands-on experience as a freelance developer, I specialize in crafting responsive and intuitive user interfaces, blending clean code with innovative design solutions.</p>
+                    <p>I'm a passionate Frontend Developer and Designer with a keen eye for creating beautiful, functional web experiences. With hands-on experience as a freelance developer, I specialize in crafting responsive and intuitive user interfaces, blending clean code with innovative design solutions.</p>
                 </div>
             </div>
         </div>
@@ -76,7 +79,7 @@
                   </div>
                   <div class="project-info">
                       <h3>AutoScroller</h3>
-                      <p>Detecting Eye Movement and scrolling up and down automateically.</p>
+                      <p>Detecting Eye Movement and scrolling up and down automatically.</p>
                       <div class="project-links">
                           <a href="https://github.com/DissanayakeLYB/AutoScroller" class="project-link">GitHub</a>
                       </div>
@@ -90,7 +93,6 @@
                       <h3>AgentArticle</h3>
                       <p>Automatically writes articles an article on a given topic and rephrases it until the AI content detected less than 10%. </p>
                       <div class="project-links">
-                          <a href="#" class="project-link">View Project</a>
                           <a href="https://github.com/DissanayakeLYB/AutoScroller" class="project-link">GitHub</a>
                       </div>
                   </div>
@@ -142,31 +144,47 @@
 
     <!-- Skills Section -->
     <section id="skills" class="skills-section">
-      <h2>Skills & Technologies</h2>
+      <h2>Skills</h2>
       <div class="skills-grid">
-          <div class="skill-card">
+          <div class="skill-card ">
               <i class="fa-brands fa-html5"></i>
               <span class="tooltip">HTML</span>
           </div>
-          <div class="skill-card">
+          <div class="skill-card ">
               <i class="fa-brands fa-css3-alt"></i>
               <span class="tooltip">CSS</span>
           </div>
-          <div class="skill-card">
+          <div class="skill-card ">
               <i class="fa-brands fa-js"></i>
               <span class="tooltip">JavaScript</span>
           </div>
-          <div class="skill-card">
+          <div class="skill-card ">
               <i class="fa-brands fa-react"></i>
               <span class="tooltip">React</span>
           </div>
-          <div class="skill-card">
+          <div class="skill-card ">
               <i class="fa-brands fa-git"></i>
               <span class="tooltip">Git</span>
           </div>
-          <div class="skill-card">
+          <div class="skill-card ">
               <i class="fa-brands fa-github"></i>
               <span class="tooltip">GitHub</span>
+          </div>
+          <div class="skill-card ">
+              <i class="fa-brands fa-bootstrap"></i>
+              <span class="tooltip">Bootstrap</span>
+          </div>
+          <div class="skill-card ">
+              <i class="fa-brands fa-python"></i>
+              <span class="tooltip">Python</span>
+          </div>
+          <div class="skill-card ">
+              <i class="fa-brands fa-figma"></i>
+              <span class="tooltip">Figma</span>
+          </div>
+          <div class="skill-card ">
+            <img width="50" height="50" src="./Images/blender_logo/blender_logo.png" alt="blender-3d"/>
+              <span class="tooltip">Blender</span>
           </div>
       </div>
   </section>
@@ -188,9 +206,9 @@
             <button type="submit" class="submit-btn">Send Message</button>
           </form>
           <div class="social-links">
-            <a href="https://github.com/DissanayakeLYB" target="_blank">GitHub</a>
-            <a href="https://www.linkedin.com/in/lasith-dissanayake/" target="_blank">LinkedIn</a>
-            <a href="mailto:lasithdissanayake.official@gmail.com">Email</a>
+            <a href="https://github.com/DissanayakeLYB" target="_blank"><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/lasith-dissanayake/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="mailto:lasithdissanayake.official@gmail.com"><i class="fa fa-envelope "></i></a>
           </div>
 
         </div>
